--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 
 [dependencies]
 protobuf = { git = "https://github.com/stepancheg/rust-protobuf", rev = "b447f53014af46a7faf6bf46d313391a61b2eace" }
+serde_json = "1.0"
